--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -15,3 +15,9 @@
         src: "{{ terraform_download_link | basename }}"
         dest: ./
         remote_src: yes
+
+    - name: Create infrastructure
+      terraform:
+        force_init: yes
+        project_path: .
+        state: present
