--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -19,5 +19,6 @@
     - name: Create infrastructure
       terraform:
         binary_path: "{{ playbook_dir }}"
+        force_init: yes
         project_path: "{{ playbook_dir }}"
         state: present
