--- a/infrastructure/port-requirements/requirements.yml
+++ b/infrastructure/port-requirements/requirements.yml
@@ -13,3 +13,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-port-check.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-port-check-settings.git
