--- a/infrastructure/configure-ssh-login/configure-ssh-user.yml
+++ b/infrastructure/configure-ssh-login/configure-ssh-user.yml
@@ -71,6 +71,7 @@
 
   - name: Determine if sudoers config exists
     tags: ['sudo']
+    become: true
     stat:
       path: "{{ sudoers }}"
     register: sudoers_state
