--- a/infrastructure/setup-ansible-offline/setup-offline.yml
+++ b/infrastructure/setup-ansible-offline/setup-offline.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup Apigee OPDK Accelerator Offline
-  hosts: localhost
+  hosts: "{{ target_host | default('localhost') }}"
   gather_facts: no
   tags: ['create']
   vars_files:
