--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -2,6 +2,7 @@
 - name: Create infrastructure
   hosts: localhost
   vars:
+#    terraform_download_link: https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip
     terraform_download_link: https://releases.hashicorp.com/terraform/0.12.0-beta2/terraform_0.12.0-beta2_linux_amd64.zip
 
   tasks:
