--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -17,6 +17,7 @@
         state: directory
 
     - name: Update with Yum utilities
+      become: true
       yum:
         name: "yum-utils"
         state: present
