updated opdk resource path variable

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -16,6 +16,7 @@
         state: directory
 
     - name: Update with Yum utilities
+      tags: ['yum']
       become: true
       yum:
         name: "yum-utils"
