updated opdk resource path variable

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -53,7 +53,7 @@
     property_folders:
       - "~/.apigee"
   roles:
-    - { role: apigee-opdk-modules }
+    - { role: apigee-
   tasks:
     - name: Ensure target folder exists
       become: true
