--- a/post-installation/validations/ldap/validate.yml
+++ b/post-installation/validations/ldap/validate.yml
@@ -4,32 +4,31 @@
   gather_facts: no
   tags: ['tls']
   vars:
-    ldap_data_port: 10389
     property_folders:
       - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
     - apigee-opdk-modules
+    - apigee-opdk-port-check-settings
   tasks:
   - name: LDAP TLS check
-    shell: "ldapsearch -x -d 1  -p {{ ldap_data_port }} -h {{ ansible_ssh_host }} -w {{ opdk_ldap_pass }}"
+    shell: "ldapsearch -x -d 1  -p {{ ldap_ports[0] }} -h {{ ansible_ssh_host }} -w {{ opdk_ldap_pass }}"
 
 - name: View LDAP system user
   hosts: ms
   gather_facts: no
   tags: ['ldap']
   vars:
-    ldap_data_port: 1
-
-
-    0389
     property_folders:
       - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
     - apigee-opdk-modules
+    - apigee-opdk-port-check-settings
 
   tasks:
   - name: Show LDAP system user
-    shell: "ldapsearch -D 'cn=manager,dc=apigee,dc=com' -b 'dc=apigee,dc=com' -LLL -h {{ ansible_ssh_host }} -p {{ ldap_data_port }} -w {{ opdk_ldap_pass }}"
+    shell: "ldapsearch -D 'cn=manager,dc=apigee,dc=com' -b 'dc=apigee,dc=com' -LLL -h {{ ansible_ssh_host }} -p {{ ldap_ports[0] }} -w {{ opdk_ldap_pass }}"
 
 - name: List Users
   hosts: ms
@@ -38,12 +37,14 @@
   vars:
     property_folders:
       - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
     - apigee-opdk-modules
+    - apigee-opdk-port-check-settings
 
   tasks:
   - name: List users
     uri:
-      url: "http://127.0.0.1:8080/v1/users"
+      url: "http://127.0.0.1:{{ ms_ports[0]}}/v1/users"
       user: "{{ opdk_user_email }}"
       password: "{{ opdk_user_pass }}"
