--- a/post-installation/update-customer-properties/update.yml
+++ b/post-installation/update-customer-properties/update.yml
@@ -1,33 +1,14 @@
 ---
 - name: Update Customer Application Properties using Code with Config
-  hosts: ms
+  hosts: "{{ target_hosts }}"
   vars:
     cwc_properties:
-    - { key: 'conf_security_externalized.authentication.implementation.class', value: 'com.apigee.rbac.impl.LdapAuthenticatorImpl', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.bind.direct.type', value: 'false', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.server.url', value: 'ldap://s6flokydcmsdc04.dm0006.info53.com:389', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.server.version', value: '3', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.server.conn.timeout', value: '50000', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.user.store.baseDN', value: 'Dc=dm0006,dc=info53,dc=com', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.user.store.search.query', value: '(&(${userAttribute}=${userId}))', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.user.store.user.attribute', value: 'mail', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.indirect.bind.server.admin.dn', value: 'cn=s.bind.npad.apigee,ou=Special.Accounts,dc=dm0006,dc=info53,dc=com', file_name: 'edge-management-server' }
-    - { key: 'conf_security_externalized.authentication.indirect.bind.server.admin.dn', value: 'cn=s.bind.npad.apigee,ou=Special.Accounts,dc=dm0006,dc=info53,dc=com', file_name: 'edge-management-server' }
+    - { key: 'conf_http_HTTPClient.use.proxy', value: 'true', file_name: 'message-processor' }
+    - { key: 'conf_http_HTTPClient.use.tunneling', value: 'false', file_name: 'message-processor' }
+    - { key: 'conf/http.properties+HTTPClient.proxy.type', value: 'HTTP', file_name: 'message-processor' }
+    - { key: 'conf/http.properties+HTTPClient.proxy.host', value: '{{ yum_proxy }}', file_name: 'message-processor' }
+    - { key: 'conf/http.properties+HTTPClient.proxy.port', value: '3128', file_name: 'message-processor' }
+    - { key: 'conf/http.properties+HTTPClient.proxy.user', value: '{{ yum_proxy_username }}', file_name: 'message-processor' }
+    - { key: 'conf/http.properties+HTTPClient.proxy.password', value: '{{ yum_proxy_password }}', file_name: 'message-processor' }
   roles:
   - { roles: apigee-opdk-cwc-update }
-
-
-
-#External LDAP integration with indirect binding
-#conf_security_authentication.user.store=ldap
-
-#c=externalized.authentication
-
-##Indirect Binding for non-prod functional account(DM0006)
-
-#conf_security_externalized.authentication.indirect.bind.server.admin.password=XXXXX
-#conf_security_externalized.authentication.indirect.bind.server.admin.password.encrypted=false
-
-#For RoleMapping
-#conf_security_externalized.authentication.role.mapper.enabled=true
-#conf_security_externalized.authentication.role.mapper.implementation.class=com.customer.authorization.impl.ExternalRoleMapperImpl
