--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -6,7 +6,7 @@
       Debian: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip"
       MacOSX: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_darwin_amd64.zip"
 
-#    terraform_download_link: https://releases.hashicorp.com/terraform/0.12.0-beta2/terraform_0.12.0-beta2_linux_amd64.zip
+#    terraform_download_link: https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_linux_amd64.zip
 
   tasks:
     - name: Set terraform link
@@ -27,6 +27,6 @@
     - name: Create infrastructure
       terraform:
         binary_path: "{{ playbook_dir }}/terraform"
-        project_path: "{{ playbook_dir }}"
+        project_path: "{{ playbook_dir }}/{{ project_path }}"
         force_init: true
         state: present
