--- a/setup/ansible.cfg
+++ b/setup/ansible.cfg
@@ -5,7 +5,7 @@ private_key_file = ~/.ssh/id_rsa
 merge_multiple_cli_tags=True
 display_args_to_stdout = True
 timeout = 60
-host_key_checking = false
+host_key_checking = False
 forks = 10
 retry_files_enabled = False
 ansible_shell_type=sh
