--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -3,17 +3,16 @@
   hosts: localhost
   vars:
     terraform_download_links:
-      Debian: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip"
-      MacOSX: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_darwin_amd64.zip"
-
-#    terraform_download_link: https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_linux_amd64.zip
+      Debian: "https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_linux_amd64.zip"
+      MacOSX: "https://releases.hashicorp.com/terraform/0.12.0/terraform_0.12.0_darwin_amd64.zip"
+#      Debian: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip"
+#      MacOSX: "https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_darwin_amd64.zip"
 
   tasks:
     - name: Install archive managment packages
       yum:
         name: "unzip"
         state: present
-      whe
 
     - name: Set terraform link
       set_fact:
