updated role with new name

--- a/post-installation/restart-planet/restart-apigee-servers.yml
+++ b/post-installation/restart-planet/restart-apigee-servers.yml
@@ -11,6 +11,6 @@
   roles:
     - { role: apigee-opdk-modules }
     - { role: apigee-opdk-stop-components }
-    - { role: apigee-opdk-restart }
+    - { role: apigee-server-restart }
     - { role: apigee-opdk-start-components }
 
