updated terraform configs

--- a/.gitignore
+++ b/.gitignore
@@ -118,5 +118,5 @@ apigee-secure
 setup/roles
 infrastructure/setup-ansible-offline/apigee-opdk-accelerator/*
 .terraform
-terraform
+terraform*
 .apigee/.idea
