updated role with new name

--- a/installations/multi-node/requirements.yml
+++ b/installations/multi-node/requirements.yml
@@ -104,4 +104,6 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-cwc-update.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-update-component-qpidd.git
+
 
