--- a/post-installation/remove/remove-components/remove-router.yml
+++ b/post-installation/remove/remove-components/remove-router.yml
@@ -10,6 +10,7 @@
     component_name: "edge-router"
 
   roles:
+  - { role: apigee-opdk-modules }
   - { role: apigee-opdk-server-self, server_types: ['router'] }
 
   tasks:
