--- a/post-installation/validations/analytics/validate.yml
+++ b/post-installation/validations/analytics/validate.yml
@@ -88,7 +88,7 @@
 
   vars:
     property_folders:
-      - "~/.apigee-secure"[]
+      - "~/.apigee-secure"
       - "~/.apigee"
   roles:
     - { role:  apigee-opdk-modules }
