--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -90,7 +90,7 @@
     - "~/.apigee-secure"
     - "~/.apigee"
   roles:
-  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'ds-config'] }
+  - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'rmp-config'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
   - { role: apigee-opdk-setup-component, profile: 'rmp', tags: ['minimum', 'rmp-setup'] }
   - { role: apigee-opdk-start-components, tags: ['minimum', 'rmp-start', 'start'] }
@@ -236,6 +236,6 @@
     - { role: apigee-opdk-settings-region, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
     - { role: apigee-opdk-settings-cassandra, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
     - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-    - { role: apigee-opdk-setup-cassandra-registration, when: region_num > 2 }
-    - { role: apigee-opdk-cassandra-rebuild, when: region_num > 2  }
+    - { role: apigee-opdk-setup-cassandra-registration, when: region_num > 2, tags: ['cassandra-registration'] }
+    - { role: apigee-opdk-cassandra-rebuild, when: region_num > 2, tags: ['cassandra-rebuild']  }
 
