--- a/post-installation/add/add-components/requirements.yml
+++ b/post-installation/add/add-components/requirements.yml
@@ -5,6 +5,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-stop-components.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-component.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-rollback.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-server-self.git
