--- a/post-installation/add/add-components/add-rmp-to-custom-pod.yml
+++ b/post-installation/add/add-components/add-rmp-to-custom-pod.yml
@@ -3,7 +3,7 @@
   hosts: "{{ target_hosts }}"
   gather_facts: no
   strategy: free
-  tags: ['edge']
+  tags: ['os']
   vars:
     property_folders:
       - "~/.apigee-secure"
@@ -12,7 +12,7 @@
     org_name: 'opdk'
     env_name: 'noisy'
     opdk_mp_pod: 'noisy'
-    virtual_hosts_port: '9001'
+    virtual_host_port: '9001'
     virtual_host_name: 'noisy'
     load_balancer: "{{ pod_load_balancer }}"
   pre_tasks:
@@ -23,7 +23,7 @@
         - org_name is defined
         - env_name is defined
         - opdk_mp_pod is defined
-        - virtual_hosts_port is defined
+        - virtual_host_port is defined
         - load_balancer is defined
       msg: Please provide the missing attribute
   roles:
@@ -42,11 +42,23 @@
 
 - name: Install Edge
   hosts: edge
-  tags: ['edge', 'edge-common']
+  tags: ['edge']
   vars:
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
+
+  pre_tasks:
+  - name: Clear attributes
+    set_fact:
+      cacheable: true
+      org_name: ''
+      env_name: ''
+      opdk_mp_pod: ''
+      load_balancer: ''
+      virtual_host_port: ''
+      virtual_host_name: ''
+
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
   - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
@@ -78,7 +90,7 @@
     org_name: 'opdk'
     env_name: 'noisy'
     opdk_mp_pod: 'noisy'
-    virtual_hosts_port: '9001'
+    virtual_host_port: '9001'
     virtual_host_name: 'noisy'
     load_balancer: "{{ pod_load_balancer }}"
   pre_tasks:
@@ -89,7 +101,7 @@
         - org_name is defined
         - env_name is defined
         - opdk_mp_pod is defined
-        - virtual_hosts_port is defined
+        - virtual_host_port is defined
         - load_balancer is defined
       msg: Please provide the missing attribute
   roles:
@@ -106,7 +118,7 @@
 - name: Configure Organization and Environments
   hosts: ms[0]
   gather_facts: no
-  tags: ['rmp']
+  tags: ['org']
   vars:
     property_folders:
       - "~/.apigee-secure"
@@ -115,7 +127,7 @@
     org_name: 'opdk'
     env_name: 'noisy'
     opdk_mp_pod: 'noisy'
-    virtual_hosts_port: '9001'
+    virtual_host_port: '9001'
     virtual_host_name: 'noisy'
     load_balancer: "{{ pod_load_balancer }}"
     tenants:
@@ -128,7 +140,7 @@
         - org_name is defined
         - env_name is defined
         - opdk_mp_pod is defined
-        - virtual_hosts_port is defined
+        - virtual_host_port is defined
         - load_balancer is defined
       msg: Please provide the missing attribute
   roles:
