--- a/post-installation/add/add-components/add-rmp-to-custom-pod.yml
+++ b/post-installation/add/add-components/add-rmp-to-custom-pod.yml
@@ -8,13 +8,13 @@
     property_folders:
       - "~/.apigee-secure"
       - "~/.apigee"
-    use_all_mps: 'n'
-    org_name: 'opdk'
-    env_name: 'noisy'
-    opdk_mp_pod: 'noisy'
-    virtual_host_port: '9001'
-    virtual_host_name: 'noisy'
-    load_balancer: "{{ pod_load_balancer }}"
+#    use_all_mps: 'n'
+#    org_name: 'opdk'
+#    env_name: 'noisy'
+#    opdk_mp_pod: 'noisy'
+#    virtual_host_port: '9001'
+#    virtual_host_name: 'noisy'
+#    load_balancer: "{{ pod_load_balancer }}"
   pre_tasks:
   - name: Assert that required attributes are provided
     assert:
@@ -24,6 +24,7 @@
         - env_name is defined
         - opdk_mp_pod is defined
         - virtual_host_port is defined
+        - virtual_host_name is defined
         - load_balancer is defined
       msg: Please provide the missing attribute
   roles:
@@ -48,16 +49,16 @@
     - "~/.apigee-secure"
     - "~/.apigee"
 
-  pre_tasks:
-  - name: Clear attributes
-    set_fact:
-      cacheable: true
-      org_name: ''
-      env_name: ''
-      opdk_mp_pod: ''
-      load_balancer: ''
-      virtual_host_port: ''
-      virtual_host_name: ''
+#  pre_tasks:
+#  - name: Clear attributes
+#    set_fact:
+#      cacheable: true
+##      org_name: ''
+##      env_name: ''
+##      opdk_mp_pod: ''
+##      load_balancer: ''
+##      virtual_host_port: ''
+##      virtual_host_name: ''
 
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
@@ -86,24 +87,25 @@
     property_folders:
       - "~/.apigee-secure"
       - "~/.apigee"
-    use_all_mps: 'n'
-    org_name: 'opdk'
-    env_name: 'noisy'
-    opdk_mp_pod: 'noisy'
-    virtual_host_port: '9001'
-    virtual_host_name: 'noisy'
-    load_balancer: "{{ pod_load_balancer }}"
-  pre_tasks:
-  - name: Assert that required attributes are provided
-    assert:
-      that:
-        - use_all_mps is defined
-        - org_name is defined
-        - env_name is defined
-        - opdk_mp_pod is defined
-        - virtual_host_port is defined
-        - load_balancer is defined
-      msg: Please provide the missing attribute
+#    use_all_mps: 'n'
+#    org_name: 'opdk'
+#    env_name: 'noisy'
+#    opdk_mp_pod: 'noisy'
+#    virtual_host_port: '9001'
+#    virtual_host_name: 'noisy'
+#    load_balancer: "{{ pod_load_balancer }}"
+#  pre_tasks:
+#  - name: Assert that required attributes are provided
+#    assert:
+#      that:
+#        - use_all_mps is defined
+#        - org_name is defined
+#        - env_name is defined
+#        - opdk_mp_pod is defined
+#        - virtual_host_port is defined
+#        - virtual_host_name is defined
+#        - load_balancer is defined
+#      msg: Please provide the missing attribute
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'license', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup','common'] }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'rmp-config']  }
@@ -123,28 +125,29 @@
     property_folders:
       - "~/.apigee-secure"
       - "~/.apigee"
-    use_all_mps: 'n'
-    org_name: 'opdk'
-    env_name: 'noisy'
-    opdk_mp_pod: 'noisy'
-    virtual_host_port: '9001'
-    virtual_host_name: 'noisy'
-    load_balancer: "{{ pod_load_balancer }}"
     tenants:
       - { org: "{{ org_name }}", env: "{{ env_name }}", new_user: 'n' }
-  pre_tasks:
-  - name: Assert that required attributes are provided
-    assert:
-      that:
-        - use_all_mps is defined
-        - org_name is defined
-        - env_name is defined
-        - opdk_mp_pod is defined
-        - virtual_host_port is defined
-        - load_balancer is defined
-      msg: Please provide the missing attribute
+#    use_all_mps: 'n'
+#    org_name: 'opdk'
+#    env_name: 'noisy'
+#    opdk_mp_pod: 'noisy'
+#    virtual_host_port: '9001'
+#    virtual_host_name: 'noisy'
+#    load_balancer: "{{ pod_load_balancer }}"
+#  pre_tasks:
+#  - name: Assert that required attributes are provided
+#    assert:
+#      that:
+#        - use_all_mps is defined
+#        - org_name is defined
+#        - env_name is defined
+#        - opdk_mp_pod is defined
+#        - virtual_host_port is defined
+#        - virtual_host_name is defined
+#        - load_balancer is defined
+#      msg: Please provide the missing attribute
   roles:
-  - { role: apigee-opdk-modules, tags: ['config', 'org-config'] }
+  - { role: apigee-opdk-modules, tags: ['org-config'] }
   - { role: apigee-opdk-setup-org, tags: ['org-setup'] }
 
 
