--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -10,6 +10,7 @@
 
   tasks:
     - name: Install archive managment packages
+      become: true
       yum:
         name: "unzip"
         state: present
